languages/montiarc-fe/src/test/resources/contextconditions/invalid/InvalidCD.arc
package contextconditions.invalid;

import doesnotexist.invalidType;

component InvalidCD {
  port
    in invalidType a,
    out invalidType b;
}
